--- a/Youth Soccer League Project/styles.css
+++ b/Youth Soccer League Project/styles.css
@@ -1,25 +1,59 @@
+@media screen and (max-width: 500px) {
+	nav a {
+		background: firebrick;
+		color: white;
+		height: 3.5em;
+	}
+
+	.menu a {
+		border: none;
+		margin-left: 1em;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		font-size: .8em;
+	}
+}
+
 body {
+	letter-spacing: 6.5;
+
+	overflow-x: hidden;
+
 	width: 100%;
 	height: 100vh;
-	min-width: 1100px;
-	margin: 0 auto;
+	margin: 0;
 	padding: 0;
 	border: none;
 	position: relative;
-	background-color: #729171;
+	background: #159957; /* fallback for old browsers */
+	background: -webkit-linear-gradient(
+		to right,
+		#155799,
+		#159957
+	); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(
+		to right,
+		#155799,
+		#159957
+	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
-
-header {
+.School label {
+	margin-top: -.7em;
+	margin-left: 2em;
+	text-align: center;
+	font-weight: 500;
 	display: flex;
-	flex-flow: column-reverse;
-	top: 0;
-	left: 0;
-	width: 100%;
-	background-image: url(Assets/Stylesheets/design2_image1.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
 }
-
+select {
+	height: 2.5em;
+	border-radius: 50px;
+}
+header {
+	width: 100%;
+	text-align: center;
+}
 aside {
 	position: absolute;
 	width: 30%;
@@ -27,163 +61,98 @@ aside {
 	left: 0;
 	height: 40%;
 }
-.map {
-	margin-left: 20%;
+.box6 input {
+	color: #fff;
 }
-
+.map {
+	margin-left: 10%;
+}
 main {
 	position: absolute;
 	width: 55%;
-	top: 40%;
+	top: 26%;
 	left: 30%;
 	height: 50%;
 }
-
+span {
+	color: rgb(248, 248, 28);
+}
+h5 {
+	color: #333;
+	font-size: 2em;
+	font-weight: 500;
+}
 .title {
 	height: 100px;
 	width: 100%;
 	color: white;
 }
-
 .sub-title {
 	width: 100%;
 	height: 70px;
 	color: white;
 }
-
-.logo {
-	width: 100px;
-	height: 100px;
-}
-
 .logo img {
-	height: 120px;
-	width: 120%;
+	float: right;
+	opacity: .8;
+	margin-top: -20vh;
+	width: 13%;
 }
-
 nav a {
 	width: 45%;
 	display: block;
 	margin: 5px auto;
-	padding: 4px 7px;
 	border: 1px solid black;
 	text-align: center;
 	text-decoration: none;
 	color: white;
-	background: #cbd5a0;
+	background: #169599;
 }
 .menu {
 	width: 80%;
 	height: 0%;
+	margin-top: -20%;
 }
-
+nav :hover {
+	color: rgb(212, 197, 57);
+	transition: all .5s ease-out;
+	border-color: rgb(212, 197, 57);
+}
 .active {
-	color: white;
-	border: 1px solid white;
-	background: #b9c196;
+	color: rgb(212, 197, 57);
+	border: 1px solid rgb(212, 197, 57);
+	background: #178681;
 }
-
 table {
 	width: 80%;
 	margin-bottom: 40px;
 }
-
 td {
 	width: 25%;
 	text-align: center;
+	color: #fff;
 }
-
+li {
+	color: #fff;
+}
 .bold {
 	font-weight: bold;
 }
-
 .tab {
-	padding-left: 15px;
+	font-size: 1em;
+	font-weight: 500;
 }
-
 .italic {
 	font-style: italic;
 }
-
-.Container {
-	display: flex;
-	flex-direction: column;
-	padding: 30px;
-	background-color: darkgray;
-	flex-grow: 3;
-	justify-content: space-around;
-	border-radius: 25px;
-}
-
 .Container div {
 	display: flex;
-	padding: 10px;
-	margin-bottom: 20px;
-	background-color: gainsboro;
-	border-radius: 25px;
+	justify-content: space-between;
+	padding: 1em;
 }
-
-.box1 input {
-	margin-left: 35px;
-	width: 500px;
-}
-
-.box2 input {
-	margin-left: 35px;
-	width: 500px;
-}
-
-.box3 input {
-	margin-left: 20px;
-	width: 500px;
-}
-
-.box4 input {
-	margin-left: 80px;
-	width: 500px;
-}
-
-.box5 input {
-	margin-left: 55px;
-	width: 500px;
-}
-
-.box6 input {
-	margin-left: 50px;
-	width: 500px;
-}
-
-.box7 input {
-	margin-left: 10px;
-	width: 500px;
-}
-
-.box8 input {
-	width: 500px;
-	margin-left: 70px;
-}
-
-.Jersey-Size div {
-	align-items: center;
-	margin-left: -20px;
-}
-
-.Short-Size {
-	align-items: center;
-}
-
-.Short-Size div {
-	align-items: center;
-	margin-left: -20px;
-}
-
 .Permission {
 	align-items: center;
 	flex-flow: column wrap;
-}
-
-.text {
-	border-style: double;
 }
 .events {
 	padding-top: 10%;
@@ -194,4 +163,49 @@ td {
 }
 .rules {
 	padding-top: 5%;
+}
+p {
+	color: #fff;
+}
+label {
+	color: #fff;
+	padding-right: 2em;
+}
+.Agree label {
+	font-size: 1em;
+	text-align: center;
+}
+input {
+	width: 70%;
+	text-align: center;
+}
+.Container div {
+	color: #fff;
+}
+.Container p {
+	color: rgb(212, 197, 57);
+	font-weight: 700;
+}
+.approval {
+	width: 100%;
+	background-color: rgb(209, 203, 203);
+	border-style: none;
+	height: 2em;
+	margin-bottom: 50px;
+}
+.play-position span {
+	color: #fff;
+}
+.uniform {
+	display: flex;
+	justify-content: space-between;
+}
+.uniform span {
+	color: #fff;
+}
+.jersey-Size span {
+	color: #fff;
+}
+.short-Size span {
+	color: #fff;
 }
