--- a/Youth Soccer League Project/styles.css
+++ b/Youth Soccer League Project/styles.css
@@ -14,30 +14,37 @@
 		width: 100%;
 		font-size: .8em;
 	}
+	.jersey-Size,
+	.short-Size {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+	}
+	.School {
+		display: flex;
+		margin: 20px;
+	}
+	.School1 {
+		display: flex;
+		flex-direction: column;
+	}
+	.logo img {
+		width: 50%;
+	}
 }
 
 body {
-	letter-spacing: 6.5;
-
+	font-family: 'ZCOOL QingKe HuangYou', cursive;
 	overflow-x: hidden;
-
 	width: 100%;
 	height: 100vh;
 	margin: 0;
 	padding: 0;
 	border: none;
 	position: relative;
-	background: #159957; /* fallback for old browsers */
-	background: -webkit-linear-gradient(
-		to right,
-		#155799,
-		#159957
-	); /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(
-		to right,
-		#155799,
-		#159957
-	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: #159957;
+	background: -webkit-linear-gradient(to right, #155799, #159957);
+	background: linear-gradient(to right, #155799, #159957);
 }
 .School label {
 	margin-top: -.7em;
@@ -65,7 +72,9 @@ aside {
 	color: #fff;
 }
 .map {
-	margin-left: 10%;
+	width: 100%;
+	height: 90%;
+	margin-bottom: 20%;
 }
 main {
 	position: absolute;
@@ -78,12 +87,11 @@ span {
 	color: rgb(248, 248, 28);
 }
 h5 {
-	color: #333;
+	color: rgb(248, 248, 28);
 	font-size: 2em;
-	font-weight: 500;
 }
 .title {
-	height: 100px;
+	/* height: 100px; */
 	width: 100%;
 	color: white;
 }
@@ -92,11 +100,13 @@ h5 {
 	height: 70px;
 	color: white;
 }
+.logo {
+	margin-right: 25vw;
+	margin-top: 10vh;
+}
 .logo img {
-	float: right;
-	opacity: .8;
-	margin-top: -20vh;
-	width: 13%;
+	opacity: .3;
+	position: fixed;
 }
 nav a {
 	width: 45%;
@@ -135,12 +145,8 @@ td {
 li {
 	color: #fff;
 }
-.bold {
-	font-weight: bold;
-}
 .tab {
 	font-size: 1em;
-	font-weight: 500;
 }
 .italic {
 	font-style: italic;
@@ -179,12 +185,15 @@ input {
 	width: 70%;
 	text-align: center;
 }
-.Container div {
+/* .Container  {
+	color: #fff;
+} */
+.Container div,
+input {
 	color: #fff;
 }
 .Container p {
 	color: rgb(212, 197, 57);
-	font-weight: 700;
 }
 .approval {
 	width: 100%;
